# Document  $Id$
# Summary   File changelog for the chemical-mime-data project.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in (chemical/x-daylight-smiles):
	Fixed specification URL.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* HACKING: Fixed typo.

	* html_docs/Makefile.am (install-sfnet): Fixed typo.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* Makefile.am:
	* html_docs/Makefile.am: Added a target install-sfnet to copy the
	files to sourceforge.net via scp.

	* freedesktop.org/Makefile.am (vpath, chemical-mime-data.xml):
	* gnome/Makefile.am (vpath, chemical-mime-data.keys)
	(chemical-mime-data.mime):
	* html_docs/Makefile.am (vpath, chemical-mime-data.html):
	* kde/Makefile.am (vpath, *.desktop): Replaced vpath directives with
	VPATH variables. Removed GNU make text processing functions to avoid
	portability warnings. Removed the cmd_common.xsl prerequisite too, to
	allow the last step.

	* icons/hicolor/Makefile.am (.svgz): Moved over to an old-fashioned
	suffix rule to avoid portability warnings.

	* src/Makefile.am (check-local): Moved GNU make control functions to
	simple echo calls to avoid portability warnings.

2007-01-28 Daniel Leidert <daniel.leidert@wgdd.de>

	* README:
	* html_docs/index.html: Synced both files. Added and completed
	content.

	* TODO: Removed README related item.

2007-01-27 Daniel Leidert <daniel.leidert@wgdd.de>

	* src/chemical-mime-database.xml.in: Initially added (currently not
	activated) chemical/x-fasta and chemical/x-mopac-vib.
	(chemical/seq-aa-fasta, chemical/seq-na-fasta): Moved the generic
	extensions to the chemical/x-fasta MIME type.
	(chemical/x-cerius): Added missing conflicts to
	application/x-x509-ca-cert.

	* xsl/cmd_website.xsl: Added a template html.content.references to add
	references links to the tabled overview.
	(html.content.head): Added an overview of the different sections for
	easier navigation.
	(html.content.table.mime.supported)